[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/Drone/Drone1/Drone1/baseDrone_1.png" type="Texture" id=1]
[ext_resource path="res://assets/Drone/Drone1/Drone1/baseDrone_0.png" type="Texture" id=2]
[ext_resource path="res://assets/Drone/Drone1/Drone1/baseDrone_2.png" type="Texture" id=3]
[ext_resource path="res://assets/Drone/Drone1/Drone2/DroneTest2_05.png" type="Texture" id=4]
[ext_resource path="res://assets/Drone/Drone1/Drone2/DroneTest2_06.png" type="Texture" id=5]
[ext_resource path="res://assets/Drone/Drone1/Drone2/DroneTest2_10.png" type="Texture" id=6]
[ext_resource path="res://assets/Drone/Drone1/Drone2/DroneTest2_11.png" type="Texture" id=7]
[ext_resource path="res://assets/Drone/Drone1/Drone2/DroneTest2_09.png" type="Texture" id=8]
[ext_resource path="res://assets/Drone/Drone1/Drone2/DroneTest2_04.png" type="Texture" id=9]
[ext_resource path="res://assets/Drone/Drone1/Drone2/DroneTest2_03.png" type="Texture" id=10]
[ext_resource path="res://assets/Drone/Drone1/Drone2/DroneTest2_07.png" type="Texture" id=11]
[ext_resource path="res://assets/Drone/Drone1/Drone2/DroneTest2_08.png" type="Texture" id=12]
[ext_resource path="res://Drone.gd" type="Script" id=13]
[ext_resource path="res://assets/Drone/GUNS/Guns1_shotgun/shotgunShot_4.png" type="Texture" id=14]
[ext_resource path="res://assets/Drone/GUNS/Guns1_pistol/pistolShot_3.png" type="Texture" id=15]
[ext_resource path="res://assets/Drone/GUNS/Guns1_laser/laserShot_0.png" type="Texture" id=16]
[ext_resource path="res://assets/Drone/GUNS/Guns1_shotgun/shotgunShot_5.png" type="Texture" id=17]
[ext_resource path="res://assets/Drone/GUNS/Guns1_shotgun/shotgunShot_1.png" type="Texture" id=18]
[ext_resource path="res://assets/Drone/GUNS/Guns1_shotgun/shotgunShot_2.png" type="Texture" id=19]
[ext_resource path="res://assets/Drone/GUNS/Guns1_shotgun/shotgunShot_6.png" type="Texture" id=20]
[ext_resource path="res://assets/Drone/GUNS/Guns1_shotgun/shotgunShot_7.png" type="Texture" id=21]
[ext_resource path="res://assets/Drone/GUNS/Guns1_shotgun/shotgunShot_3.png" type="Texture" id=22]
[ext_resource path="res://assets/Drone/GUNS/Guns1_shotgun/shotgunShot_0.png" type="Texture" id=23]
[ext_resource path="res://assets/Drone/GUNS/Guns1_pistol/pistolShot_4.png" type="Texture" id=24]
[ext_resource path="res://assets/Drone/GUNS/Guns1_pistol/pistolShot_2.png" type="Texture" id=25]
[ext_resource path="res://assets/Drone/GUNS/Guns1_pistol/pistolShot_0.png" type="Texture" id=26]
[ext_resource path="res://assets/Drone/GUNS/Guns1_pistol/pistolShot_6.png" type="Texture" id=27]
[ext_resource path="res://assets/Drone/GUNS/Guns1_pistol/pistolShot_1.png" type="Texture" id=28]
[ext_resource path="res://assets/Drone/GUNS/Guns1_pistol/pistolShot_7.png" type="Texture" id=29]
[ext_resource path="res://assets/Drone/GUNS/Guns1_pistol/pistolShot_5.png" type="Texture" id=30]
[ext_resource path="res://assets/Drone/GUNS/Guns1_laser/laserShot_2.png" type="Texture" id=31]
[ext_resource path="res://assets/Drone/GUNS/Guns1_laser/laserShot_3.png" type="Texture" id=32]
[ext_resource path="res://assets/Drone/GUNS/Guns1_laser/laserShot_6.png" type="Texture" id=33]
[ext_resource path="res://assets/Drone/GUNS/Guns1_laser/laserShot_1.png" type="Texture" id=34]
[ext_resource path="res://assets/Drone/GUNS/Guns1_laser/laserShot_4.png" type="Texture" id=35]
[ext_resource path="res://assets/Drone/GUNS/Guns1_laser/laserShot_5.png" type="Texture" id=36]
[ext_resource path="res://assets/Drone/GUNS/Guns1_laser/laserShot_7.png" type="Texture" id=37]
[ext_resource path="res://assets/Drone/GUNS/Guns1_laser/laserShot_8.png" type="Texture" id=38]
[ext_resource path="res://assets/Drone/GUNS/Guns1/Gunsprite_2.png" type="Texture" id=39]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 15 ), ExtResource( 24 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 29 ), null ],
"loop": false,
"name": "Pistol",
"speed": 35.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 21 ), null ],
"loop": false,
"name": "Shotgun",
"speed": 35.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 39 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 31 ), ExtResource( 31 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 33 ), ExtResource( 37 ), ExtResource( 38 ), null ],
"loop": false,
"name": "Laser",
"speed": 35.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "Pistol",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "Shotgun",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 9 ) ],
"loop": true,
"name": "Laser",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.464088, 1 )
colors = PoolColorArray( 0.556863, 0.545098, 0.545098, 0.890196, 1, 1, 1, 0.890196 )

[node name="Drone" type="AnimatedSprite"]
position = Vector2( 865, 171 )
z_index = 3
frames = SubResource( 2 )
animation = "Laser"
script = ExtResource( 13 )

[node name="droneSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )
animation = "Laser"
frame = 3
playing = true

[node name="Gungone_timer" type="Timer" parent="."]
wait_time = 0.6

[node name="Tween" type="Tween" parent="."]

[node name="gunSmoke" type="CPUParticles2D" parent="."]
position = Vector2( 66, -15 )
amount = 25
lifetime = 0.8
speed_scale = 1.4
randomness = 0.05
lifetime_randomness = 0.13
local_coords = false
draw_order = 1
emission_shape = 2
emission_rect_extents = Vector2( 30, 30 )
direction = Vector2( 0, 0 )
gravity = Vector2( 0, -1000 )
angular_velocity = 92.48
angular_velocity_random = 0.28
linear_accel = -29.36
angle = 720.0
angle_random = 0.55
scale_amount = 13.0
scale_amount_random = 0.68
color_ramp = SubResource( 3 )

[connection signal="animation_finished" from="." to="." method="_on_Drone_animation_finished"]
[connection signal="timeout" from="Gungone_timer" to="." method="_on_Gungone_timer_timeout"]
